# trying

./: .gitignore
chrome/: tmall_data.crx  tmall_data.pem
chrome/tmall_data/: manifest.json  options.js  popup.html  popup.js
dart/future/: main.dart  pubspec.yaml
dart/tour/: main.dart  pubspec.yaml
dart/tour/.dart_tool/: package_config.json
dart/types/: main.dart
go/b/: main.go
go/bleve/: go.mod  main.go
go/debug/: go.mod  main.go
go/linkname/: go.mod  main.go
go/linkname/pack/: pack.go
go/ok/: main.go
go/order_no/: main.go
node/: data.json  main.js
node/pixi/: index.html
python/: multiprocessing_demo.py
rpcx/client/: main.go
rpcx/server/: main.go
rust/guessing_game/: Cargo.toml
rust/guessing_game/src/: main.rs
rust/hello_cargo/: .env  Cargo.toml  main.go
rust/hello_cargo/src/: main.rs
rust/hello_cargo/src/demo/: box_demo.rs  closures_demo.rs  deref_demo.rs  drop_demo.rs  generics_demo.rs  hashmap_demo.rs  iterators_demo.rs  lifetime_demo.rs  message_passing_demo.rs  mod.rs  option_demo.rs  ownership_demo.rs  panic_demo.rs  rc_demo.rs  rc_ref_cell_demo.rs  ref_cell_demo.rs  shared_state_demo.rs  sqlx_demo.rs  string_demo.rs  struct_demo.rs  threads_demo.rs  traits_demo.rs  variables_demo.rs  vector_demo.rs  weak_demo.rs
rust/hello_cargo/src/demo/amqp/: mod.rs  rpc_client.rs  rpc_server.rs
rust/hello_world/: main
