[package]
name = "hello_cargo"
version = "0.1.0"
authors = ["yinshuwei <yinshuwei@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.3.3"
uuid = { version = "0.7", features = [ "v4" ] }
env_logger = "0.6"
mockstream = "0.0.3"