[package]
name = "hello_cargo"
version = "0.1.0"
authors = ["yinshuwei <yinshuwei@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4.2"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
env_logger = "0.10.0"
mockstream = "0.0.3"

